<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="keer.matrimony.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="keer.matrimony.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigationDetails2"
            app:destination="@id/navigationDetails" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="keer.matrimony.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="keer.matrimony.ui.search.SearchFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/search_fragment" />

    <fragment
        android:id="@+id/navigationDetails"
        android:name="keer.matrimony.UIFragments.ProfileDetails"
        android:label="@string/title_notifications"
        tools:layout="@layout/profile_list_layout" >
        <action
            app:popUpTo="@id/navigation_dashboard"
            app:popUpToInclusive="true"
            android:id="@+id/action_navigationDetails_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigationDetails_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>