<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UIFragments.onBoarding.PersonalDetails">
    <LinearLayout
        android:padding="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_profile_data"/>
        <LinearLayout
            android:background="@drawable/button_shape_secondary"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_height="50dp">
            <EditText
                android:inputType="number"
                android:paddingStart="10dp"
                android:background="@drawable/button_shape_secondary"
                android:hint="@string/father_contact_number"
                android:id="@+id/father"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/button_shape_secondary"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_height="50dp">
            <EditText
                android:paddingStart="10dp"
                android:hint="@string/whatsapp_number"
                android:background="@drawable/button_shape_secondary"
                android:id="@+id/whatsapp"
                android:fontFamily="sans-serif-smallcaps"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/button_shape_secondary"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_height="50dp">
            <EditText
                android:paddingStart="10dp"
                android:hint="@string/present_adddress"
                android:background="@drawable/button_shape_secondary"
                android:id="@+id/PresentAddress"
                android:inputType="text"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/button_shape_secondary"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_height="50dp">
            <EditText
                android:paddingStart="10dp"
                android:hint="@string/permanent_address"
                android:background="@drawable/button_shape_secondary"
                android:id="@+id/PermanentAddress"
                android:inputType="text"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nextButton"
                android:background="@drawable/button_shape"
                android:text="Next"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>